UI version 2 and Programming version 2.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,16 @@
             android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
         <activity android:name=".do5th"
             android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
+        <activity android:name=".dont1st"
+            android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
+        <activity android:name=".dont2nd"
+            android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
+        <activity android:name=".dont3rd"
+            android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
+        <activity android:name=".dont4th"
+            android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
+        <activity android:name=".dont5th"
+            android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
     </application>
 
 </manifest>
